--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,5 +1,9 @@
+<% include partials/header %>
+
 <h1>Landing Page</h1>
 
 <p>Welcome!</p>
 
 <a href="/campgrounds">view them all</a>
+
+<% include partials/footer %>
