setup route to show form

--- a/views/campgrounds.ejs
+++ b/views/campgrounds.ejs
@@ -1,6 +1,7 @@
 <% include partials/header %>
 
 <h1>this is the campgrounds page</h1>
+<a href="/campgrounds/new"> Add new Campground</a>
 <% campgrounds.forEach(function(campground){ %>
 <div> 
 <h4><%= campground.name %></h4> 
