--- a/views/campgrounds.ejs
+++ b/views/campgrounds.ejs
@@ -1,12 +1,31 @@
 <% include partials/header %>
 
-<h1>this is the campgrounds page</h1>
-<a href="/campgrounds/new"> Add new Campground</a>
+
+
+<div class="container">
+<header class="jumbotron">
+    <div class="container"> 
+   <h1>Welcome to Camp!</h1> 
+   <p>View our hand-picked campgrounds!</p>
+    <p>
+        <a class="btn btn-primary btn-lg" href="/campgrounds/new"> Add new Campground</a>
+    </p>
+    </div>
+</header>
+
+
+<div class="row text-center" style="display:flex-wrap: wrap;">
 <% campgrounds.forEach(function(campground){ %>
-<div> 
-<h4><%= campground.name %></h4> 
-<img src="<%= campground.image %>">
+<div class="col-md-3 col-sm-6"> 
+    <div class="thumbnail">
+    <img src="<%= campground.image %>">
+    <div class="caption">
+    <h4><%= campground.name %></h4> 
+    </div>
+    </div>
 </div>
 <% }); %>
+</div>
+</div>
 
 <% include partials/footer %>
